--- a/seller-panel and website/web-index.html
+++ b/seller-panel and website/web-index.html
@@ -55,7 +55,7 @@
       <a href="./web-products.html"><button class="btn btn-see-products">See All Products</button></a>
     </div>
     <hr>
-    <div class="swiper mySwiper sale-slider">
+    <div class="swiper mySwiper swiper-products">
       <div class="swiper-wrapper">
           <div class="swiper-slide">
             <a class="card-product" href="./web-Product-details.html">
@@ -171,30 +171,77 @@
                 </div>
               </div>
             </a>
-          </div>
-          <div class="swiper-slide">
-            <a class="card-product" href="./web-Product-details.html">
-              <div class="card Product-card">
-                <div class="card-head">
-                  <img src="./web-assets/assets/images/t-shirt_product.jpg" class="card-image">
-                </div>
-                <div class="card-body">
-                  <div class="brand-and-ratings">
-                    <div class="brand">H&M</div>
-                    <div class="rating-and-sold">
-                      <div class="rating"><i class="bx bxs-star"></i> 4.9</div>
-                      <div class="sold">(13.8k) sold</div>
-                    </div>
-                  </div>
-                  <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
-                  <div class="prices">
-                    <div class="card-subtitle original-price">Rs 295.00</div>
-                  </div>
-                  <div class="card-subtitle discounted-price"><del>Rs 295.00</del>-66%</div>
-                </div>
+        </div>
+        <div class="swiper-slide">
+          <a class="card-product" href="./web-Product-details.html">
+            <div class="card Product-card">
+              <div class="card-head">
+                <img src="./web-assets/assets/images/t-shirt_product.jpg" class="card-image">
               </div>
-            </a>
-          </div>
+              <div class="card-body">
+                <div class="brand-and-ratings">
+                  <div class="brand">H&M</div>
+                  <div class="rating-and-sold">
+                    <div class="rating"><i class="bx bxs-star"></i> 4.9</div>
+                    <div class="sold">(13.8k) sold</div>
+                  </div>
+                </div>
+                <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
+                <div class="prices">
+                  <div class="card-subtitle original-price">Rs 295.00</div>
+                </div>
+                <div class="card-subtitle discounted-price"><del>Rs 295.00</del>-66%</div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="swiper-slide">
+          <a class="card-product" href="./web-Product-details.html">
+            <div class="card Product-card">
+              <div class="card-head">
+                <img src="./web-assets/assets/images/t-shirt_product.jpg" class="card-image">
+              </div>
+              <div class="card-body">
+                <div class="brand-and-ratings">
+                  <div class="brand">H&M</div>
+                  <div class="rating-and-sold">
+                    <div class="rating"><i class="bx bxs-star"></i> 4.9</div>
+                    <div class="sold">(13.8k) sold</div>
+                  </div>
+                </div>
+                <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
+                <div class="prices">
+                  <div class="card-subtitle original-price">Rs 295.00</div>
+                </div>
+                <div class="card-subtitle discounted-price"><del>Rs 295.00</del>-66%</div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="swiper-slide">
+          <a class="card-product" href="./web-Product-details.html">
+            <div class="card Product-card">
+              <div class="card-head">
+                <img src="./web-assets/assets/images/t-shirt_product.jpg" class="card-image">
+              </div>
+              <div class="card-body">
+                <div class="brand-and-ratings">
+                  <div class="brand">H&M</div>
+                  <div class="rating-and-sold">
+                    <div class="rating"><i class="bx bxs-star"></i> 4.9</div>
+                    <div class="sold">(13.8k) sold</div>
+                  </div>
+                </div>
+                <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
+                <div class="prices">
+                  <div class="card-subtitle original-price">Rs 295.00</div>
+                </div>
+                <div class="card-subtitle discounted-price"><del>Rs 295.00</del>-66%</div>
+              </div>
+            </div>
+          </a>
+        </div>
+          <!-- Add more swiper slides as needed -->
       </div>
       <!-- Navigation Arrows -->
       <div class="swiper-button-next"></div>
@@ -832,9 +879,9 @@
     </div>
   </div>
 </div>
-<div class="message-btn">
-  <i class="icon">&#9993;</i> <!-- This is the envelope icon -->
-  <span class="message-text">Message</span>
+<div class="notification-wrapper message-btn">
+  <i class='bx bxs-message-rounded'></i>
+  <div class="notification-badge">1</div>
 </div>
 <!-- /content -->
  <!-- footer -->
