--- a/test.html
+++ b/test.html
@@ -1,77 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 </head>
 <style>
-ul {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  /* Wrapper for the notification */
+.message-btn{
+  position: relative;
+  width: 60px;
+  height: 60px;
   display: flex;
-  li {
-    list-style: none;
-    a {
-      position: relative;
-      display: block;
-      text-transform: uppercase;
-      margin: 20px 0;
-      padding: 10px 20px;
-      text-decoration: none;
-      color: #262626;
-      font-family: sans-serif;
-      font-size: 18px;
-      font-weight: 600;
-      transition: .5s;
-      z-index: 1;
-      &:before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        border-top: 2px solid #ff7f00;
-        border-bottom: 2px solid #ff7f00;
-        transform: scaleY(2);
-        opacity: 0;
-        transition: .3s;
-      }
-      &:after {
-        content: '';
-        position: absolute;
-        top: 2px;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: #ff7f00;
-        transform: scale(0);
-        opacity: 0;
-        transition: .3s;
-        z-index: -1;
-      }
-      &:hover {
-        color: #fff;
-        &:before {
-          transform: scaleY(1);
-          opacity: 1;
-        }
-        &:after {
-          transform: scaleY(1);
-          opacity: 1;
-        }
-      }
-    }
+  align-items: center;
+  justify-content: center;
+  background-color: #007bff; /* Blue circle */
+  border-radius: 50%;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px, rgba(0, 0, 0, 0.2) 0px 1px 3px;
+  i{
+    font-size: 36px;
+    color: white;
+  }
+  
+  /* Notification badge */
+  .notification-badge {
+    position: absolute;
+    top: -4px;
+    right: 3px;
+    width: 20px;
+    height: 20px;
+    background-color: #e00; /* Red for badge */
+    color: #fff;
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 4px;
   }
 }
+
+
 </style>
 <body>
-    <ul>
-        <li><a href="#">Categories</a></li>
-        <li><a href="#">Become a Seller</a></li>
-      </ul>
+
+<div class="notification-wrapper message-btn">
+  <i class='bx bxs-message-rounded'></i>
+  <div class="notification-badge">1</div>
+</div>
 </body>
 </html>
