--- a/seller-panel and website/web-Product-details.html
+++ b/seller-panel and website/web-Product-details.html
@@ -751,10 +751,7 @@
         </div>
     </div>
 </div>
-<div class="message-btn">
-  <i class="icon">&#9993;</i> <!-- This is the envelope icon -->
-  <span class="message-text">Message</span>
-</div>
+<div id="msg-btn-chat"></div>
 <!-- /content -->
  <!-- footer -->
  <div id="footer"></div>
@@ -766,6 +763,11 @@
 
 <!-- scripts -->
 <script>
+    document.getElementById("msg-btn-chat").innerHTML = fetch('./web-msg-btn.html')
+  .then(response => response.text())
+  .then(data => {
+      document.getElementById("msg-btn-chat").innerHTML = data;
+  });
   // Load the header dynamically
    document.getElementById("header").innerHTML = fetch('./web-header.html')
   .then(response => response.text())
