--- a/seller-panel and website/web-account-manage.html
+++ b/seller-panel and website/web-account-manage.html
@@ -967,10 +967,7 @@
       </div>
     </div>
   </div>
-  <div class="message-btn">
-    <i class="icon">&#9993;</i> <!-- This is the envelope icon -->
-    <span class="message-text">Message</span>
-  </div>
+<div id="msg-btn-chat"></div>
   <!-- /content -->
   <!-- footer -->
 <div id="footer"></div>
@@ -990,6 +987,11 @@
     .then(data => {
         document.getElementById("header").innerHTML = data;
     });
+    document.getElementById("msg-btn-chat").innerHTML = fetch('./web-msg-btn.html')
+  .then(response => response.text())
+  .then(data => {
+      document.getElementById("msg-btn-chat").innerHTML = data;
+  });
   
   
     document.getElementById("footer").innerHTML = fetch('./web-footer.html')
