--- a/seller-panel and website/web-refund&exchange.html
+++ b/seller-panel and website/web-refund&exchange.html
@@ -116,10 +116,7 @@ requiring a return if there is a defect.
         </p>
     </main>
 </div>
-<div class="message-btn">
-  <i class="icon">&#9993;</i> <!-- This is the envelope icon -->
-  <span class="message-text">Message</span>
-</div>
+<div id="msg-btn-chat"></div>
 <!-- /content -->
  <!-- footer -->
 <div id="footer"></div>
@@ -138,7 +135,11 @@ requiring a return if there is a defect.
       document.getElementById("header").innerHTML = data;
   });
 
-
+  document.getElementById("msg-btn-chat").innerHTML = fetch('./web-msg-btn.html')
+  .then(response => response.text())
+  .then(data => {
+      document.getElementById("msg-btn-chat").innerHTML = data;
+  });
   document.getElementById("footer").innerHTML = fetch('./web-footer.html')
   .then(response => response.text())
   .then(data => {
