--- a/seller-panel and website/web-terms.html
+++ b/seller-panel and website/web-terms.html
@@ -78,10 +78,7 @@ be resolved in the courts of <b>“The Electronic Transactions Ordinance (ETO) o
 
     </main>
 </div>
-<div class="message-btn">
-  <i class="icon">&#9993;</i> <!-- This is the envelope icon -->
-  <span class="message-text">Message</span>
-</div>
+<div id="msg-btn-chat"></div>
 <!-- /content -->
 <!-- footer -->
 <div id="footer"></div>
@@ -100,7 +97,11 @@ be resolved in the courts of <b>“The Electronic Transactions Ordinance (ETO) o
       document.getElementById("header").innerHTML = data;
   });
 
-
+  document.getElementById("msg-btn-chat").innerHTML = fetch('./web-msg-btn.html')
+  .then(response => response.text())
+  .then(data => {
+      document.getElementById("msg-btn-chat").innerHTML = data;
+  });
   document.getElementById("footer").innerHTML = fetch('./web-footer.html')
   .then(response => response.text())
   .then(data => {
