--- a/seller-panel and website/web-about-us.html
+++ b/seller-panel and website/web-about-us.html
@@ -141,10 +141,7 @@
         </div>
       </div>
 </div>
-<div class="message-btn">
-  <i class="icon">&#9993;</i> <!-- This is the envelope icon -->
-  <span class="message-text">Message</span>
-</div>
+<div id="msg-btn-chat"></div>
 <!-- /content -->
  <!-- footer -->
  <!-- footer -->
@@ -162,6 +159,11 @@
   .then(response => response.text())
   .then(data => {
       document.getElementById("header").innerHTML = data;
+  });
+  document.getElementById("msg-btn-chat").innerHTML = fetch('./web-msg-btn.html')
+  .then(response => response.text())
+  .then(data => {
+      document.getElementById("msg-btn-chat").innerHTML = data;
   });
 
 
