--- a/seller-panel and website/web-chats.html
+++ b/seller-panel and website/web-chats.html
@@ -169,10 +169,7 @@
           </div>
   </div>
 </div>
-<div class="message-btn">
-  <i class="icon">&#9993;</i> <!-- This is the envelope icon -->
-  <span class="message-text">Message</span>
-</div>
+<div id="msg-btn-chat"></div>
  <!-- footer -->
  <div id="footer"></div>
 <!-- /footer -->
@@ -185,6 +182,11 @@
 
 <!-- scripts -->
 <script>
+    document.getElementById("msg-btn-chat").innerHTML = fetch('./web-msg-btn.html')
+  .then(response => response.text())
+  .then(data => {
+      document.getElementById("msg-btn-chat").innerHTML = data;
+  });
   // Load the header dynamically
    document.getElementById("header").innerHTML = fetch('./web-header.html')
   .then(response => response.text())
