--- a/seller-panel and website/web-checkout.html
+++ b/seller-panel and website/web-checkout.html
@@ -196,10 +196,7 @@ font-family: sans-serif;" name="" id="" class="field-select">
       </div>
     </div>
   </div>
-  <div class="message-btn">
-    <i class="icon">&#9993;</i> <!-- This is the envelope icon -->
-    <span class="message-text">Message</span>
-  </div>
+  <div id="msg-btn-chat"></div>
   <!-- /content -->
   <!-- footer -->
  <div id="footer"></div>
@@ -217,7 +214,11 @@ font-family: sans-serif;" name="" id="" class="field-select">
     .then(data => {
         document.getElementById("header").innerHTML = data;
     });
-  
+    document.getElementById("msg-btn-chat").innerHTML = fetch('./web-msg-btn.html')
+  .then(response => response.text())
+  .then(data => {
+      document.getElementById("msg-btn-chat").innerHTML = data;
+  });
   
     document.getElementById("footer").innerHTML = fetch('./web-footer.html')
     .then(response => response.text())
