--- a/seller-panel and website/web-shipment-policy.html
+++ b/seller-panel and website/web-shipment-policy.html
@@ -111,10 +111,7 @@
         <h4>Thank you for choosing Creed Cart!</h4>
     </main>
 </div>
-<div class="message-btn">
-  <i class="icon">&#9993;</i> <!-- This is the envelope icon -->
-  <span class="message-text">Message</span>
-</div>
+<div id="msg-btn-chat"></div>
 <!-- /content -->
  <!-- footer -->
 <div id="footer"></div>
@@ -126,6 +123,11 @@
 
 <!-- scripts -->
 <script>
+    document.getElementById("msg-btn-chat").innerHTML = fetch('./web-msg-btn.html')
+  .then(response => response.text())
+  .then(data => {
+      document.getElementById("msg-btn-chat").innerHTML = data;
+  });
   // Load the header dynamically
    document.getElementById("header").innerHTML = fetch('./web-header.html')
   .then(response => response.text())
