--- a/seller-panel and website/web-cart.html
+++ b/seller-panel and website/web-cart.html
@@ -188,123 +188,8 @@
       <h3>You might also like</h3>
     </div>
     <hr>
-    <div class="swiper mySwiper swiper-products">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <a class="card-product" href="./web-Product-details.html">
-                <div class="card Product-card">
-                  <div class="card-head">
-                    <img src="./web-assets/assets/images/t-shirt_product.jpg" class="card-image">
-                  </div>
-                  <div class="card-body">
-                    <div class="brand-and-ratings">
-                      <div class="brand">H&M</div>
-                      <div class="rating-and-sold">
-                        <div class="rating"><i class="bx bxs-star"></i> 4.9</div>
-                        <div class="sold">(13.8k) sold</div>
-                      </div>
-                    </div>
-                    <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
-                    <div class="prices">
-                      <div class="card-subtitle original-price">Rs295.00</div>
-                    </div>
-                    <div class="card-subtitle discounted-price"><del>Rs295.00</del>-66%</div>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="swiper-slide">
-              <a class="card-product" href="./web-Product-details.html">
-                <div class="card Product-card">
-                  <div class="card-head">
-                    <img src="./web-assets/assets/images/t-shirt_product.jpg" class="card-image">
-                  </div>
-                  <div class="card-body">
-                    <div class="brand-and-ratings">
-                      <div class="brand">H&M</div>
-                      <div class="rating-and-sold">
-                        <div class="rating"><i class="bx bxs-star"></i> 4.9</div>
-                        <div class="sold">(13.8k) sold</div>
-                      </div>
-                    </div>
-                    <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
-                    <div class="prices">
-                      <div class="card-subtitle original-price">Rs295.00</div>
-                    </div>
-                    <div class="card-subtitle discounted-price"><del>Rs295.00</del>-66%</div>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="swiper-slide">
-              <a class="card-product" href="./web-Product-details.html">
-                <div class="card Product-card">
-                  <div class="card-head">
-                    <img src="./web-assets/assets/images/t-shirt_product.jpg" class="card-image">
-                  </div>
-                  <div class="card-body">
-                    <div class="brand-and-ratings">
-                      <div class="brand">H&M</div>
-                      <div class="rating-and-sold">
-                        <div class="rating"><i class="bx bxs-star"></i> 4.9</div>
-                        <div class="sold">(13.8k) sold</div>
-                      </div>
-                    </div>
-                    <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
-                    <div class="prices">
-                      <div class="card-subtitle original-price">Rs295.00</div>
-                    </div>
-                    <div class="card-subtitle discounted-price"><del>Rs295.00</del>-66%</div>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="swiper-slide">
-              <a class="card-product" href="./web-Product-details.html">
-                <div class="card Product-card">
-                  <div class="card-head">
-                    <img src="./web-assets/assets/images/t-shirt_product.jpg" class="card-image">
-                  </div>
-                  <div class="card-body">
-                    <div class="brand-and-ratings">
-                      <div class="brand">H&M</div>
-                      <div class="rating-and-sold">
-                        <div class="rating"><i class="bx bxs-star"></i> 4.9</div>
-                        <div class="sold">(13.8k) sold</div>
-                      </div>
-                    </div>
-                    <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
-                    <div class="prices">
-                      <div class="card-subtitle original-price">Rs295.00</div>
-                    </div>
-                    <div class="card-subtitle discounted-price"><del>Rs295.00</del>-66%</div>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="swiper-slide">
-              <a class="card-product" href="./web-Product-details.html">
-                <div class="card Product-card">
-                  <div class="card-head">
-                    <img src="./web-assets/assets/images/t-shirt_product.jpg" class="card-image">
-                  </div>
-                  <div class="card-body">
-                    <div class="brand-and-ratings">
-                      <div class="brand">H&M</div>
-                      <div class="rating-and-sold">
-                        <div class="rating"><i class="bx bxs-star"></i> 4.9</div>
-                        <div class="sold">(13.8k) sold</div>
-                      </div>
-                    </div>
-                    <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
-                    <div class="prices">
-                      <div class="card-subtitle original-price">Rs295.00</div>
-                    </div>
-                    <div class="card-subtitle discounted-price"><del>Rs295.00</del>-66%</div>
-                  </div>
-                </div>
-              </a>
-          </div>
+    <div class="swiper mySwiper likely-products">
+      <div class="swiper-wrapper">
           <div class="swiper-slide">
             <a class="card-product" href="./web-Product-details.html">
               <div class="card Product-card">
@@ -321,9 +206,9 @@
                   </div>
                   <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
                   <div class="prices">
-                    <div class="card-subtitle original-price">Rs295.00</div>
+                    <div class="card-subtitle original-price">Rs 295.00</div>
                   </div>
-                  <div class="card-subtitle discounted-price"><del>Rs295.00</del>-66%</div>
+                  <div class="card-subtitle discounted-price"><del>Rs 295.00</del>-66%</div>
                 </div>
               </div>
             </a>
@@ -344,9 +229,9 @@
                   </div>
                   <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
                   <div class="prices">
-                    <div class="card-subtitle original-price">Rs295.00</div>
+                    <div class="card-subtitle original-price">Rs 295.00</div>
                   </div>
-                  <div class="card-subtitle discounted-price"><del>Rs295.00</del>-66%</div>
+                  <div class="card-subtitle discounted-price"><del>Rs 295.00</del>-66%</div>
                 </div>
               </div>
             </a>
@@ -367,19 +252,134 @@
                   </div>
                   <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
                   <div class="prices">
-                    <div class="card-subtitle original-price">Rs295.00</div>
+                    <div class="card-subtitle original-price">Rs 295.00</div>
                   </div>
-                  <div class="card-subtitle discounted-price"><del>Rs295.00</del>-66%</div>
+                  <div class="card-subtitle discounted-price"><del>Rs 295.00</del>-66%</div>
                 </div>
               </div>
             </a>
           </div>
-            <!-- Add more swiper slides as needed -->
+          <div class="swiper-slide">
+            <a class="card-product" href="./web-Product-details.html">
+              <div class="card Product-card">
+                <div class="card-head">
+                  <img src="./web-assets/assets/images/t-shirt_product.jpg" class="card-image">
+                </div>
+                <div class="card-body">
+                  <div class="brand-and-ratings">
+                    <div class="brand">H&M</div>
+                    <div class="rating-and-sold">
+                      <div class="rating"><i class="bx bxs-star"></i> 4.9</div>
+                      <div class="sold">(13.8k) sold</div>
+                    </div>
+                  </div>
+                  <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
+                  <div class="prices">
+                    <div class="card-subtitle original-price">Rs 295.00</div>
+                  </div>
+                  <div class="card-subtitle discounted-price"><del>Rs 295.00</del>-66%</div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="swiper-slide">
+            <a class="card-product" href="./web-Product-details.html">
+              <div class="card Product-card">
+                <div class="card-head">
+                  <img src="./web-assets/assets/images/t-shirt_product.jpg" class="card-image">
+                </div>
+                <div class="card-body">
+                  <div class="brand-and-ratings">
+                    <div class="brand">H&M</div>
+                    <div class="rating-and-sold">
+                      <div class="rating"><i class="bx bxs-star"></i> 4.9</div>
+                      <div class="sold">(13.8k) sold</div>
+                    </div>
+                  </div>
+                  <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
+                  <div class="prices">
+                    <div class="card-subtitle original-price">Rs 295.00</div>
+                  </div>
+                  <div class="card-subtitle discounted-price"><del>Rs 295.00</del>-66%</div>
+                </div>
+              </div>
+            </a>
         </div>
-        <!-- Navigation Arrows -->
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-    </div>
+        <div class="swiper-slide">
+          <a class="card-product" href="./web-Product-details.html">
+            <div class="card Product-card">
+              <div class="card-head">
+                <img src="./web-assets/assets/images/t-shirt_product.jpg" class="card-image">
+              </div>
+              <div class="card-body">
+                <div class="brand-and-ratings">
+                  <div class="brand">H&M</div>
+                  <div class="rating-and-sold">
+                    <div class="rating"><i class="bx bxs-star"></i> 4.9</div>
+                    <div class="sold">(13.8k) sold</div>
+                  </div>
+                </div>
+                <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
+                <div class="prices">
+                  <div class="card-subtitle original-price">Rs 295.00</div>
+                </div>
+                <div class="card-subtitle discounted-price"><del>Rs 295.00</del>-66%</div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="swiper-slide">
+          <a class="card-product" href="./web-Product-details.html">
+            <div class="card Product-card">
+              <div class="card-head">
+                <img src="./web-assets/assets/images/t-shirt_product.jpg" class="card-image">
+              </div>
+              <div class="card-body">
+                <div class="brand-and-ratings">
+                  <div class="brand">H&M</div>
+                  <div class="rating-and-sold">
+                    <div class="rating"><i class="bx bxs-star"></i> 4.9</div>
+                    <div class="sold">(13.8k) sold</div>
+                  </div>
+                </div>
+                <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
+                <div class="prices">
+                  <div class="card-subtitle original-price">Rs 295.00</div>
+                </div>
+                <div class="card-subtitle discounted-price"><del>Rs 295.00</del>-66%</div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="swiper-slide">
+          <a class="card-product" href="./web-Product-details.html">
+            <div class="card Product-card">
+              <div class="card-head">
+                <img src="./web-assets/assets/images/t-shirt_product.jpg" class="card-image">
+              </div>
+              <div class="card-body">
+                <div class="brand-and-ratings">
+                  <div class="brand">H&M</div>
+                  <div class="rating-and-sold">
+                    <div class="rating"><i class="bx bxs-star"></i> 4.9</div>
+                    <div class="sold">(13.8k) sold</div>
+                  </div>
+                </div>
+                <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
+                <div class="prices">
+                  <div class="card-subtitle original-price">Rs 295.00</div>
+                </div>
+                <div class="card-subtitle discounted-price"><del>Rs 295.00</del>-66%</div>
+              </div>
+            </div>
+          </a>
+        </div>
+          <!-- Add more swiper slides as needed -->
+      </div>
+      <!-- Navigation Arrows -->
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+  </div>
   </div>
 </div>
 <div id="msg-btn-chat"></div>
@@ -389,8 +389,11 @@
 <!-- /footer -->
 
 <!-- THIRD PARTY JS -->
-<script src="./web-assets/assets/js/script.js"></script>
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script src="./web-assets/assets/js/dropdowns.js"></script>
+<script src="./web-assets/assets/js/preloader.js"></script>
+<script src="./web-assets/assets/js/swiper.js"></script>
+<script src="./web-assets/assets/js/language.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 
 <!-- scripts -->
 <script>
