--- a/seller-panel and website/web-index.html
+++ b/seller-panel and website/web-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta name="viewp2ort" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,15 @@
     <link rel="stylesheet" href="./web-assets/assets/css/kit.css">
     <link rel="stylesheet" href="./web-assets/assets/css/style.css">
 </head>
-<body>
+<style>
+  .VIpgJd-ZVi9od-l4eHX-hSRGPd{
+    display: none;
+  }
+  .VIpgJd-ZVi9od-ORHb-OEVmcd{
+    display: none;
+  }
+</style>
+<body style="display: contents;">
   <!-- modal for the App -->
 <div id="page-modal" class="modal-box">
     <div class="modal-content">
@@ -81,6 +89,8 @@
                   <img src="./web-assets/assets/images/help-center.png" width="40px" height="40px" alt="">
                 </a>
               </div>
+            </li>
+            <li>
             </li>
             <li><a href="./web-cart.html"><i class="bx bx-cart fs-4"></i></a></li> 
             <li class="noti-counter">
@@ -1085,8 +1095,5 @@
 <script src="./web-assets/assets/js/language.js"></script>
 <script src="./web-assets/assets/js/home-page-modal.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-<script>
- 
-</script>
 </body>
 </html>
