--- a/seller-panel and website/web-terms.html
+++ b/seller-panel and website/web-terms.html
@@ -85,8 +85,10 @@ be resolved in the courts of <b>“The Electronic Transactions Ordinance (ETO) o
 <!-- /footer -->
 
 <!-- THIRD PARTY JS -->
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 <script src="./web-assets/assets/js/script.js"></script>
+<script src="./web-assets/assets/js/preloader.js"></script>
+<script src="./web-assets/assets/js/language.js"></script>
+<script src="./web-assets/assets/js/dropdowns.js"></script>
 
 <!-- scripts -->
 <script>
