--- a/seller-panel and website/web-Product-details.html
+++ b/seller-panel and website/web-Product-details.html
@@ -759,7 +759,10 @@
 
  <!-- THIRD PARTY JS -->
  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
- <script src="./web-assets/assets/js/script.js"></script>
+ <!-- <script src="./web-assets/assets/js/swiper.js"></script> -->
+ <script src="./web-assets/assets/js/preloader.js"></script>
+ <script src="./web-assets/assets/js/dropdowns.js"></script>
+ <script src="./web-assets/assets/js/language.js"></script>
 
 <!-- scripts -->
 <script>
