--- a/seller-panel and website/web-chats.html
+++ b/seller-panel and website/web-chats.html
@@ -175,10 +175,12 @@
 <!-- /footer -->
 
 <!-- THIRD PARTY JS -->
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 <script src="./web-assets/assets/js/script.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="./web-assets/assets/js/dropdowns.js"></script>
+<script src="./web-assets/assets/js/preloader.js"></script>
+<script src="./web-assets/assets/js/language .js"></script>
 
 <!-- scripts -->
 <script>
